--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "07-restserver",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^15.0.0",
-    "express": "^4.17.2"
-  }
+	"name": "07-restserver",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"bcryptjs": "2.4.3",
+		"cors": "2.8.5",
+		"dotenv": "15.0.0",
+		"express": "4.17.2",
+		"express-validator": "^6.14.0",
+		"mongoose": "6.1.9"
+	}
 }
