Autenticacion con google terminada

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ PORT=8080
 MONGODB_ATLAS=mongodb+srv://user_node_cafe:4qy69PAbAXNXe2Po@miclustercafe.j9jku.mongodb.net/cafeDB
 
 SECRETORPRIVATEKEY=Est403sMyPub1icK3yLOL
+
+GOOGLE_CLIENT_ID=948447336808-740oknnmri0m55d833nm0lddfprc1rtg.apps.googleusercontent.com
+GOOGLE_SECRET_ID=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
